<resources>
    <string name="app_name">物载天下司机</string>
    <string name="pullDownRefreshText">下拉刷新</string>
    <string name="refreshingText">加载中&#8230;</string>
    <string name="releaseRefreshText">释放更新</string>
    <string name="noMoreData">没有更多数据了</string>
    <string name="loggingLoad">登录中&#8230;</string>
    <string name="sendingLoad">发送中&#8230;</string>
    <string name="dataLoad">数据加载中&#8230;</string>
    <string name="submissionLoad">提交中&#8230;</string>
    <string name="crossLoad">上传中&#8230;</string>
    <string name="download">下载中&#8230;</string>
    <string name="shareJumpLoad">分享跳转中&#8230;</string>
    <string name="readAndWrite">这款应用需要获取读写权限，才能使用</string>
    <string name="sdPermission">您拒绝了「SD卡读写权限」所需要的相关权限!请到「设置」开启权限</string>
    <string name="checkNetwork">无法连接,请检查网络连接是否正常</string>
    <string name="illegalArgumentException">客户端错误，传输了不合法或不正确的数据(非法数据异常)</string>
    <string name="clientError">客户端未知错误</string>
    <string name="serverReturnsDataError">服务器返回数据错误</string>
    <string name="serverReturnsDataNull">服务器返回数据为空</string>
    <string name="serverReturnsImgDataNull">服务器返回图片数据为空</string>
    <string name="urlError">客户端请求的URL错误</string>
    <string name="otherError">其他错误</string>
    <string name="grammarError">服务器不理解请求的语法</string>
    <string name="serverError">服务器错误</string>
    <string name="authenticationError"> 网络请求身份验证错误</string>
    <string name="serverRejectsRequest">服务器拒绝请求</string>
    <string name="jsonError">Json解析错误</string>
    <string name="requestError">客户端请求出错，妨碍了服务器的处理</string>
    <string name="clickRefresh">，点击刷新</string>
    <string name="forFailure">获取失败</string>
    <string name="login">登录</string>
    <string name="accountNumber">手机号</string>
    <string name="accountErroe">手机号错误</string>
    <string name="hintAccountText">请输入您的手机号</string>
    <string name="inputPhone">请输入正确的手机号</string>
    <string name="password">密码</string>
    <string name="passwordErroe">密码错误</string>
    <string name="hintPasswordText">请输入密码</string>
    <string name="hintPasswordText1">密码长度应在6～20位内</string>
    <string name="forgotPassword">忘记密码?</string>
    <string name="register">注册</string>
    <string name="register1">立即注册</string>
    <string name="errorCode">请输入验证码</string>
    <string name="phone">手机号</string>
    <string name="thirdpartylogin">第三方账号快捷登录</string>
    <string name="thirdqq">QQ</string>
    <string name="thirdweixin">微信</string>
    <string name="authorizationLoad">授权中&#8230;</string>
    <string name="authoriseErr">授权失败，请重试</string>
    <string name="authoriseErr1">您取消了授权</string>
    <string name="authoriseErr2">您还没有安装应用,请下载应用</string>
    <string name="authoriseErr3">没有安装应用</string>
    <string name="loginErr">登录失败，请重新登录</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="bindPhone">绑定手机号</string>
    <string name="bindPhoneSuccessfully">绑定手机号成功！</string>
    <string name="resetpwd">重置密码成功，请登录！</string>
    <string name="password1">确认密码</string>
    <string name="referralcode">推荐码</string>
    <string name="referralcode1">请输入推荐码（可选）</string>
    <string name="password2">请再输入一遍密码</string>
    <string name="password3">请输入6～20位密码</string>
    <string name="testget">已发送</string>
    <string name="retrievePassword">找回密码</string>
    <string name="verificationCode">验证码</string>
    <string name="testGetCode">获取验证码</string>
    <string name="revalidation">重新验证</string>
    <string name="toResend">s后重发</string>
    <string name="toResend1">秒后重发</string>
    <string name="clickFinish">点击完成代表您同意</string>
    <string name="myagreement">我同意</string>
    <string name="myagreement1">点注册，即表示已阅读并同意</string>
    <string name="agreement">《物载天下服务协议》</string>
    <string name="agreement1">同意《物载天下服务协议》才能注册使用</string>
    <string name="determine">确定</string>
    <string name="resetPassword">重置密码</string>
    <string name="registeredPhoneNumber">手机号注册</string>
    <string name="basicInformation">基本信息</string>
    <string name="prompt">请填写您的真实信息，通过后将不能修改</string>
    <string name="realName">真实姓名</string>
    <string name="hintName1">请输入正确的姓名</string>
    <string name="pleaseFillOut">请填写</string>
    <string name="pleaseFillOut1">请填写地址的省市区</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="IdNumber">身份证号</string>
    <string name="hintIDerrorText">请输入正确的身份证号</string>
    <string name="permanentAddress">常驻地址</string>
    <string name="logisticsType">物流类型</string>
    <string name="cityLogistics">同城物流</string>
    <string name="longDistanceLogistics">长途物流</string>
    <string name="uploudFrontIdPhoto">请上传身份证正面照片</string>
    <string name="uploudBackIdPhoto">请上传身份证反面照片</string>
    <string name="holdingIdPhoto">手持身份证照</string>
    <string name="sample">请参照“示例”，保证身份证号码清晰可见。</string>
    <string name="sample1">遮挡，模糊，或传不相关图片的都将导致审核不通过。</string>
    <string name="conductorModels">车长车型</string>
    <string name="conductor">车长</string>
    <string name="models">车型</string>
    <string name="m">米</string>
    <string name="pleaseSelect">请选择</string>
    <string name="load">载重</string>
    <string name="tonne">吨</string>
    <string name="carrierProduct">可载体积</string>
    <string name="cubicMeters">立方米</string>
    <string name="licenseNumber">车牌号码</string>
    <string name="pleaseLicensePlateNumber">请输入车牌号</string>
    <string name="pleasecarLicensePlateNumbe">请上传车头和车牌号码照片</string>
    <string name="startingDatedriverLicense">驾驶证起始日期</string>
    <string name="closingDatedriverLicense">驾驶证截止日期</string>
    <string name="uploadDatedriverLicense">请上传驾驶证照片</string>
    <string name="startingDatedrivingLicense">行驶证起始日期</string>
    <string name="registrationDeadline">行驶证截止日期</string>
    <string name="uploadDeadline">请上传行驶证照片</string>
    <string name="policydeadline">保单起始日期</string>
    <string name="policydeadline1">保单截止日期</string>
    <string name="uploadpolicy">请上传保险单照片</string>
    <string name="startingDateOperationCertificate">营运证起始日期</string>
    <string name="closingDateOperationCertificate">营运证截止日期</string>
    <string name="uploadDateOperationCertificate">请上传营运证照片</string>
    <string name="greateThanCurrentTime">预约的时间要大于当前时间</string>
    <string name="lessThanCurrent">起始日期应小于当前时间</string>
    <string name="aboveCurrentTime">有效日期应大于当前时间</string>
    <string name="noData">没有数据</string>
    <string name="noData1">请拍照后再提交</string>
    <string name="imagePathError">图片路径错误</string>
    <string name="denyPermission">您拒绝了「图片选择」所需要的相关权限!</string>
    <string name="needPermission">图片选择需要以下权限:\n\n 1.访问设备上的照片\n\n 2.拍照\n\n 3.读写权限</string>
    <string name="submittedSuccessfully">提交成功</string>
    <string name="submittedInformation">提交后如要修改请联系客服！</string>
    <string name="submitAudit">提交审核</string>
    <string name="locationPermissions">定位选择需要以下权限:\n\n1.访问设备上的gps\n\n2.读写权限</string>
    <string name="locationPermissions1">您拒绝了「定位」所需要的相关权限!</string>
    <string name="getorder">接单</string>
    <string name="reject">拒绝</string>
    <string name="order">订单</string>
    <string name="mission">任务</string>
    <string name="supplygoods">货源</string>
    <string name="settheline">设定路线</string>
    <string name="addtheline">添加路线</string>
    <string name="mine">我的</string>
    <string name="startingPoint">出&#160;&#160;&#160;&#160;&#160;发&#160;&#160;&#160;&#160;&#160;地</string>
    <string name="endPoint">目&#160;&#160;&#160;&#160;&#160;的&#160;&#160;&#160;&#160;&#160;地</string>
    <string name="conductormodels">车长车型</string>
    <string name="cuccessCar">出车成功，请注意听取订单！</string>
    <string name="collectSuccess">收车成功，请注意好好休息！</string>
    <string name="exitProcedureAgain">再按一次退出程序</string>
    <string name="announcement">公告通知</string>
    <string name="close">关闭</string>
    <string name="goToWork">上班</string>
    <string name="afterWork">下班</string>
    <string name="systemOffer">系统出价</string>
    <string name="shipperOffer">货主出价</string>
    <string name="hintDriverBid">请输入报价金额</string>
    <string name="hintDriverBid1">请输入正确的报价金额</string>
    <string name="realTime">实时</string>
    <string name="urgent">加急</string>
    <string name="makeAppointment">预约</string>
    <string name="availableType">可接单类型</string>
    <string name="descriptionGoods1">货物名称：</string>
    <string name="orderNumber1">订单号：</string>
    <string name="vehicleDemand">车辆需求</string>
    <string name="conductor1">车长：</string>
    <string name="models1">车型：</string>
    <string name="parametersGoods">货物参数</string>
    <string name="weight1">重量：</string>
    <string name="volume">体积：</string>
    <string name="thePlace">起运地</string>
    <string name="expectedMileage">预计公里数</string>
    <string name="driverCargo">司机装卸货</string>
    <string name="need">需要</string>
    <string name="noNeed">不需要</string>
    <string name="peiSongDian">配送点</string>
    <string name="costDistribution">配送点费用</string>
    <string name="estimatedTime">预计耗时</string>
    <string name="actualPrice">实际价格</string>
    <string name="orderNeeds">本订单需要签收单，签收单快递费到付</string>
    <string name="orderNeeds1">本订单需要签收单，签收单快递费需要司机付款</string>
    <string name="orderNotNeeds">本订单不需要签收单</string>
    <string name="sendQuotation">发送报价</string>
    <string name="amount">金额</string>
    <string name="pleaseEnterPrice">请输入价格</string>
    <string name="firmQuotation">确认报价</string>
    <string name="isConfirmOrder">是否确认接单？</string>
    <string name="confirmReceiptRejected">确认拒绝该接单？</string>
    <string name="cancel1">取消</string>
    <string name="estimatePrice">该订单系统预估价格：¥</string>
    <string name="afterSubmission">报价提交后不可修改</string>
    <string name="confirmAgreeCancelOrder1">确认不同意取消该接单？</string>
    <string name="confirmAgreeCancelOrder">确认同意取消该接单？</string>
    <string name="systemForecast">系统预估</string>
    <string name="selectCity">选择城市</string>
    <string name="china">中国</string>
    <string name="cityName1">请输入您要搜索的地址</string>
    <string name="currentPositioningCity">当前定位城市</string>
    <string name="recentVisitCity">最近访问城市</string>
    <string name="recent">最近</string>
    <string name="hotCity">热门城市</string>
    <string name="hot">热门</string>
    <string name="cityName">城市名、拼音首字母 ……</string>
    <string name="searchHistory">搜索历史</string>
    <string name="clearSearchRecord">清除搜索记录</string>
    <string name="message">消息</string>
    <string name="systemMessage">系统消息</string>
    <string name="personalMessage">个人消息</string>
    <string name="orderMessage">订单消息</string>
    <string name="generalElection">全选</string>
    <string name="markedRead">标为已读</string>
    <string name="delete1">删除</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="markedRead1">您还未选择任何信息！无法标记已读！</string>
    <string name="delete2">您还未选择任何信息！无法删除消息！</string>
    <string name="noInformation">暂无信息</string>
    <string name="orderUser">下单用户：</string>
    <string name="orderNumber2">订单编号：</string>
    <string name="dentifyLabelRead">确定标为已读？</string>
    <string name="sureToDelete">确定删除？</string>
    <string name="todayMission">今日任务</string>
    <string name="completeMission">完成任务</string>
    <string name="today">今天</string>
    <string name="orderPrice">订单价格：</string>
    <string name="onArrival">到达起运地</string>
    <string name="start">发车</string>
    <string name="destination1">到达目的地</string>
    <string name="selectContact">选择联系人</string>
    <string name="orgPhone">发货人手机</string>
    <string name="orgTelphone">发货人固定电话</string>
    <string name="destPhone">收货人手机</string>
    <string name="destTelphone">收货人固定电话</string>
    <string name="destination">目的地</string>
    <string name="selectNavigation">选择导航</string>
    <string name="baiDuNavigation">百度地图导航至起始地</string>
    <string name="baiDuNavigation1">百度地图导航至目的地</string>
    <string name="gaoDeNavigation">高德地图导航至起始地</string>
    <string name="gaoDeNavigation1">高德地图导航至目的地</string>
    <string name="cancel">&#160;&#160;&#160;取&#160;&#160;&#160;&#160;&#160;&#160;&#160;消&#160;&#160;&#160;</string>
    <string name="yuan">元</string>
</resources>