<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch"
    android:background="@color/transparent_1"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        style="@style/MatchWrap"
        android:layout_margin="@dimen/dimen40"
        android:background="@drawable/shape_sendquotationbounced"
        android:orientation="vertical">

        <RelativeLayout style="@style/MatchWrap">

            <TextView
                style="@style/WrapWrap"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:paddingTop="@dimen/dimen24"
                android:text="@string/sendQuotation"
                android:textColor="@color/titletextcolors"
                android:textSize="@dimen/textsize18" />

            <ImageView
                android:id="@+id/iv_cancel"
                style="@style/WrapWrap"
                android:layout_alignParentRight="true"
                android:paddingBottom="@dimen/dimen10"
                android:paddingLeft="@dimen/dimen10"
                android:paddingRight="@dimen/dimen25"
                android:paddingTop="@dimen/dimen23"
                android:src="@mipmap/ic_close" />

        </RelativeLayout>


        <LinearLayout
            style="@style/MatchWrap"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dimen17"
            android:paddingLeft="@dimen/dimen26"
            android:paddingRight="@dimen/dimen26"
            android:paddingTop="@dimen/dimen26">

            <TextView
                style="@style/WrapWrap"
                android:text="@string/amount"
                android:textColor="@color/hintcolors"
                android:textSize="@dimen/textsize16" />

            <EditText
                android:id="@+id/et_pleaseEnterPrice"
                style="@style/AutoMatch"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/pleaseEnterPrice"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:paddingLeft="@dimen/dimen10"
                android:paddingRight="@dimen/dimen10"
                android:textColor="@color/titletextcolors"
                android:textColorHint="@color/hintcolors"
                android:textCursorDrawable="@drawable/shape_cursor"
                android:textSize="@dimen/textsize16" />

            <TextView
                style="@style/WrapWrap"
                android:text="@string/yuan"
                android:textColor="@color/hintcolors"
                android:textSize="@dimen/textsize16" />
        </LinearLayout>

        <TextView
            style="@style/DividerWidth"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginRight="@dimen/dimen26" />

        <TextView
            android:id="@+id/tv_estimatePrice"
            style="@style/MatchWrap"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginRight="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen15"
            android:text="@string/estimatePrice"
            android:textColor="@color/hintcolors"
            android:textSize="@dimen/textsize12" />

        <TextView
            style="@style/MatchWrap"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginRight="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen12"
            android:text="@string/afterSubmission"
            android:textColor="@color/ff9A06Colors"
            android:textSize="@dimen/textsize12" />


        <TextView
            android:id="@+id/tv_firmQuotation"
            style="@style/MatchWrap"
            android:layout_marginBottom="@dimen/dimen31"
            android:layout_marginLeft="@dimen/dimen26"
            android:layout_marginRight="@dimen/dimen26"
            android:layout_marginTop="@dimen/dimen31"
            android:background="@drawable/shape_sendquotation"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen15"
            android:paddingTop="@dimen/dimen15"
            android:text="@string/firmQuotation"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/textsize15" />

    </LinearLayout>


</LinearLayout>